--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,8 @@ version: 0.2
 phases:
   install:
     commands:
-      - pip3 install Flask
+      - python3 -m pip install --upgrade pip
+      - python3 -m pip install Flask
   build:
     commands:
       - echo Build started on `date`
