--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   install:
     commands:
       - echo Download pip ...
-      - curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
+      - curl https://bootstrap.pypa.io/pip/3.4/get-pip.py -o get-pip.py
       - echo Install pip ...
       - python3 get-pip.py
       - echo pip installed ...
