--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,14 +5,20 @@ phases:
     commands:
       - echo pip initial version ...
       - python -m pip --version
+      - echo python3 initial version in this Docker image ...
+      - python3 --version
       - echo Download pip ...
-      - curl https://bootstrap.pypa.io/pip/2.7/get-pip.py -o get-pip.py
-      - python -m pip install Flask
+      - curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
+      - echo Install pip ...
+      - python3 get-pip.py
+      - echo pip installed ...
+      - echo Installed Flask ...
+      - python3 -m pip install Flask
   build:
     commands:
       - echo Build started on `date`
       - echo Compiling the Python code...
-      - python test_app.py
+      - python3 test_app.py
   post_build:
     commands:
       - echo Build completed on `date`
