--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,6 +5,8 @@ phases:
     commands:
       - echo pip initial version ...
       - python -m pip --version
+      - echo pip3 initial version ...
+      - python3 -m pip --version
       - echo python3 initial version in this Docker image ...
       - python3 --version
       - echo Download pip ...
