--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,7 +8,7 @@ phases:
       - echo python3 initial version in this Docker image ...
       - python3 --version
       - echo Download pip ...
-      - curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
+      - curl https://bootstrap.pypa.io/pip/3.4/get-pip.py -o get-pip.py
       - echo Install pip ...
       - python3 get-pip.py
       - echo pip installed ...
