--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,10 +5,11 @@ phases:
     commands:
       - echo pip initial version ...
       - python -m pip --version
-      - echo python3 initial version in this Docker image ...
+      - echo Python3 initial version ...
       - python3 --version
+
       - echo Download pip ...
-      - curl https://bootstrap.pypa.io/pip/3.4/get-pip.py -o get-pip.py
+      - curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
       - echo Install pip ...
       - python3 get-pip.py
       - echo pip installed ...
